--- a/style.css
+++ b/style.css
@@ -7,8 +7,14 @@
 }
 
 
-body {
+main{
+  flex: 1;
+}
+
+body{
   min-height: 100vh;
+  display: flex;
+  flex-direction: column;
   background: linear-gradient(
     270deg,
     #0b1220,
@@ -19,7 +25,7 @@ body {
   background-size: 600% 600%;
   animation: bgMove 15s ease infinite;
   transition: all 0.5s ease;
-  color: #f8fafc; 
+  color: #f8fafc;
 }
 
 body.light {
@@ -584,6 +590,7 @@ body.light .footer{
 .footer-links a:hover{
   text-decoration: underline;
 }
+
 
 
 
